# skeleton-python-repo

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.__project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.__project_slug}}/.devcontainer/: devcontainer.json  {% if cookiecutter.include_cuda == "n" -%} Dockerfile {%- endif %}  {% if cookiecutter.include_cuda == "y" -%} Dockerfile {%- endif %}
{{cookiecutter.__project_slug}}/tests/: __init__.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__project_slug}}/: __init__.py
