[tool.poetry]
name = "skeleton-python-project"
version = "0.1.0"
description = "A skeleton python repository for rapidly setting up new python repositories"
authors = ["Sebastian Bending <s.bending@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
taskipy = "^1.10.3"
cookiecutter = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.00"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = { cmd = "pre-commit run --all-files", help = "Check code format" }
