[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.__project_version}}"
description = "{{ cookiecutter.brief_description }}"
authors = ["[ AUTHOR_NAME ] <[ AUTHOR_EMAIL ]>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
taskipy = "^1.10.3"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = { cmd = "pre-commit run --all-files", help = "Check code format" }
test = { cmd = "pytest", help = "Run unit tests" }
